--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
   </div>
 </div>
 <div class="heroSubP">
-  <p>Introducing</p>
+  <p>hello</p>
 </div>
 <div class="hero">
   <div class="heroT">
-    <h2>Eclipx</h2>
-    <h2>Eclipx</h2>
+    <h2>on my site</h2>
+    <h2>on my site</h2>
   </div>
 </div>
-<p class="heroP">The world's best platform, <br>
-  powered by EclipxOS + React.</p>
+<p class="heroP">The world's no useful<br>
+site web</p>
 <div class="mountains">
   <div></div>
   <div></div>
