--- a/index.html
+++ b/index.html
@@ -50,11 +50,14 @@
 </div>
 <p class="heroP">The world's no useful<br>
 site web</p>
-<div class="mountains">
-  <div></div>
-  <div></div>
-  <div></div>
+<div class="dodo">
+    <div class="beak"></div>
+    <div class="eye"></div>
+    <div class="eye eye-left"></div>
+    <div class="cheek cheek-left"></div>
+    <div class="cheek cheek-right"></div>
 </div>
+
 <div class="hero-spacer"></div>
 
 <div class="content-section">
