--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="mid-spot" onclick="document.body.classList.toggle('gold');"></div>
   <button class="contact-btn">
     <span class="glow"></span>
-    <span class="contact-btn-content">Contact Us</span>
+    <span clacomss="contact-btn-content">Contact Us</span>
   </button>
 
   <div class="spotlight">
@@ -50,14 +50,11 @@
 </div>
 <p class="heroP">The world's no useful<br>
 site web</p>
-<div class="dodo">
-    <div class="beak"></div>
-    <div class="eye"></div>
-    <div class="eye eye-left"></div>
-    <div class="cheek cheek-left"></div>
-    <div class="cheek cheek-right"></div>
+<div class="mountains">
+  <div></div>
+  <div></div>
+  <div></div>
 </div>
-
 <div class="hero-spacer"></div>
 
 <div class="content-section">
