--- a/index.html
+++ b/index.html
@@ -1,72 +1,56 @@
 <!DOCTYPE html>
-<html lang="fr" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>test</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <!-- design inspired by https://www.authkit.com/ -->
-<div class="header">
-  <h2><a href="pornhub.com" target="_blank" rel="noopener noreferrer">Dodo</a></h2>
-  <div class="mid-spot" onclick="document.body.classList.toggle('gold');"></div>
-  <button class="contact-btn">
-    <span class="glow"></span>
-    <span clacomss="contact-btn-content">Contact Us</span>
-  </button>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Map des Conflits et Catastrophes</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <style>
+    #carte { height: 100vh; }
+  </style>
+</head>
+<body>
+  <div id="carte"></div>
 
-  <div class="spotlight">
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
-</div>
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script>
+    // Initialisation de la carte centrée sur le monde
+    const carte = L.map('carte').setView([20, 0], 2);
 
-<canvas id="particleCanvas"></canvas>
+    // Ajouter une couche (ici OpenStreetMap)
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(carte);
 
-<div class="accent-lines">
-  <div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
-  <div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
-</div>
-<div class="heroSubP">
-  <p>hello</p>
-</div>
-<div class="hero">
-  <div class="heroT">
-    <h2>on my site</h2>
-    <h2>on my site</h2>
-  </div>
-</div>
-<p class="heroP">The world's no useful<br>
-site web</p>
-<div class="mountains">
-  <div></div>
-  <div></div>
-  <div></div>
-</div>
-<div class="hero-spacer"></div>
+    // Exemple de données dynamiques (à remplacer par un appel AJAX ou fetch)
+    const evenements = [
+      {
+        titre: "Conflit en région X",
+        lat: 34.5,
+        lng: 45.3,
+        description: "Description du conflit...",
+        sources: "<a href='https://exemple.com'>Source 1</a>, <a href='https://exemple2.com'>Source 2</a>"
+      },
+      {
+        titre: "Catastrophe Naturelle Y",
+        lat: -15.2,
+        lng: 28.8,
+        description: "Détails sur la catastrophe...",
+        sources: "<a href='https://exemple.com'>Source 1</a>"
+      }
+    ];
 
-<div class="content-section">
-  <div class="content-acc">
-    <div></div>
-    <div></div>
-  </div>
-  <p class="subt">Revolutionary by design</p>
-  <h3 class="title">Harness. Empower.<br>
-    Unmatched Versatility.</h3>
-  <p class="subp">At the core lies our revolutionary framework, <br>ensuring adaptability across all application architectures.</p>
-</div>
-<script src="code.js"></script>
-  </body>
+    // Ajout des marqueurs sur la carte pour chaque événement
+    evenements.forEach(evenement => {
+      const marker = L.marker([evenement.lat, evenement.lng]).addTo(carte);
+      marker.on('click', () => {
+        const contenuPopup = `
+          <strong>${evenement.titre}</strong><br/>
+          <em>Description:</em> ${evenement.description}<br/>
+          <em>Sources:</em> ${evenement.sources}
+        `;
+        marker.bindPopup(contenuPopup).openPopup();
+      });
+    });
+  </script>
+</body>
 </html>
